# memori-cookbook

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  example_request.yml
.github/workflows/: ci.yml
ai_consultant_agent/: .env.example  README.md  __init__.py  app.py  pyproject.toml  workflow.py
ai_consultant_agent/.streamlit/: config.toml
clinical-exam-evaluator/: .gitignore  README.md  demo.py  pyproject.toml
contributor_assistant_cli/: .env.example  README.md  pyproject.toml  requirements.txt
contributor_assistant_cli/src/contributor_assistant_cli/: __init__.py  cli.py  config.py  core.py  llm_manager.py  memory_manager.py
crewai_research_agent/: README.md  main.py  requirements.txt
customer-support-agent-memory/: .dockerignore  ARCHITECTURE.md  Dockerfile  QUICK_REFERENCE.md  README.md  digitalocean_client.py  docker-compose.yml  init.sql  main.py  memori_integration.py  requirements.txt
customer-support-agent-memory/static/: demo.html  knowledge_upload_demo.html  widget.js
customer_support_agent_memory/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Procfile  QUICK_REFERENCE.md  README.md  __init__.py  docker-compose.yml  init.sql  main.py  memori_integration.py
customer_support_agent_memory/static/: demo.html  knowledge_upload_demo.html  widget.js
customer_support_voice_agent/: .env.example  app.py  pyproject.toml  requirements.txt
fastapi_dynamic_agent/: .env.example  Makefile  README.md  pyproject.toml  run.py
fastapi_dynamic_agent/app/: main.py  prompts.py
fastapi_dynamic_agent/app/api/: deps.py
fastapi_dynamic_agent/app/api/v1/: api.py
fastapi_dynamic_agent/app/api/v1/endpoints/: agents.py  chat.py  health.py
fastapi_dynamic_agent/app/core/: config.py
fastapi_dynamic_agent/app/models/: agents.py  chat.py
fastapi_dynamic_agent/app/services/: llm.py
fastapi_dynamic_agent/tests/: conftest.py  test_prompts.py
fastapi_dynamic_agent/tests/api/v1/: test_agents.py  test_chat.py  test_health.py
hosted_chatbot_agent/: .env.example  pyproject.toml  run.py
hosted_chatbot_agent/app/: main.py  prompts.py
hosted_chatbot_agent/app/api/v1/endpoints/: agents.py  chat.py  health.py
hosted_chatbot_agent/app/core/: config.py
hosted_chatbot_agent/app/models/: agents.py  chat.py
hosted_chatbot_agent/app/services/: llm.py
personal_finance_advisor/: .env.example  .gitignore  README.md  core.py  memory_utils.py  pyproject.toml
personal_finance_advisor/backend/: database.py  main.py
personal_finance_advisor/frontend/: index.html  package-lock.json  package.json
personal_finance_advisor/frontend/src/: styles.css  types.ts
personal_finance_advisor/frontend/src/components/: AnalyticsTab.tsx  BudgetTab.tsx  Dashboard.tsx  GoalsTab.tsx  LandingPage.tsx  ProfileTab.tsx  TransactionTab.tsx
study_coach_agent/: .env.example  README.md  app.py  memory_utils.py  pyproject.toml  study_graph.py
technical_interview_prep_agent/: .env.example  core.py  memory_utils.py
technical_interview_prep_agent/backend/: database.py  main.py
wellness_coach_agent/: .env.example  .gitignore  README.md  core.py  memory_utils.py  pyproject.toml
wellness_coach_agent/backend/: __init__.py  database.py  main.py
wellness_coach_agent/frontend/: index.html  package-lock.json  package.json
wellness_coach_agent/frontend/src/: styles.css  types.ts
wellness_coach_agent/frontend/src/components/: AnalyticsTab.tsx  CheckInTab.tsx  DailyLogTab.tsx  Dashboard.tsx  LandingPage.tsx  ProfileTab.tsx  WellnessPlanTab.tsx
youtube_trend_agent/: .env.example  app.py  core.py
