[project]
name = "memori-cookbook"
version = "0.1.0"
description = "Cookbook examples and tutorials for Memori Python SDK"
authors = [{name = "Memori Labs Team", email = "noc@memorilabs.ai"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "memory", "agents", "llm", "examples", "tutorials", "cookbook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "memori>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://memorilabs.ai"
Documentation = "https://memorilabs.ai/docs/"
Repository = "https://github.com/MemoriLabs/memori-cookbook"
"Main SDK" = "https://github.com/MemoriLabs/Memori"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
